--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -5,6 +5,7 @@ target_sources_ifdef(CONFIG_ZTACX_LEAF_BATTERY       app PRIVATE src/ztacx_batte
 target_sources_ifdef(CONFIG_ZTACX_LEAF_BT_CENTRAL    app PRIVATE src/ztacx_bt_central.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_BT_PERIPHERAL app PRIVATE src/ztacx_bt_central.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_BT_UART       app PRIVATE src/ztacx_bt_central.c)
+target_sources_ifdef(CONFIG_ZTACX_LEAF_BUTTON        app PRIVATE src/ztacx_button.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_GPS           app PRIVATE src/ztacx_gps.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_I2C           app PRIVATE src/ztacx_i2c.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_LED           app PRIVATE src/ztacx_led.c)
