Functional bluetooth (static only, dynamic broken).  Lux sensor.

--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -3,14 +3,15 @@ FILE(GLOB ztacx_sources *.c src/*.c)
 target_sources(app PRIVATE src/ztacx.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_BATTERY       app PRIVATE src/ztacx_battery.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_BT_CENTRAL    app PRIVATE src/ztacx_bt_central.c)
-target_sources_ifdef(CONFIG_ZTACX_LEAF_BT_PERIPHERAL app PRIVATE src/ztacx_bt_central.c)
-target_sources_ifdef(CONFIG_ZTACX_LEAF_BT_UART       app PRIVATE src/ztacx_bt_central.c)
+target_sources_ifdef(CONFIG_ZTACX_LEAF_BT_PERIPHERAL app PRIVATE src/ztacx_bt_peripheral.c)
+target_sources_ifdef(CONFIG_ZTACX_LEAF_BT_UART       app PRIVATE src/ztacx_bt_uart.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_BUTTON        app PRIVATE src/ztacx_button.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_GPS           app PRIVATE src/ztacx_gps.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_I2C           app PRIVATE src/ztacx_i2c.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_LED           app PRIVATE src/ztacx_led.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_LIDAR         app PRIVATE src/ztacx_lidar.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_LORAWAN       app PRIVATE src/ztacx_lorawan.c)
+target_sources_ifdef(CONFIG_ZTACX_LEAF_LUX           app PRIVATE src/ztacx_lux.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_POWER         app PRIVATE src/ztacx_power.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_PWMLED        app PRIVATE src/ztacx_pwmled.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_SETTINGS      app PRIVATE src/ztacx_settings.c)
