--- a/samples/bt_peripheral/prj.conf
+++ b/samples/bt_peripheral/prj.conf
@@ -1,9 +1,15 @@
 # I cannot explain why CONFIG_FLASH is necessary, but it is
 CONFIG_FLASH=y
 CONFIG_LOG=y
-CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_ZTACX_LEAF_LED=y
-CONFIG_SHELL=y
+CONFIG_ZTACX_LEAF_SETTINGS=y
+CONFIG_ZTACX_LEAF_BT_PERIPHERAL=y
+CONFIG_BT=y
+CONFIG_BT_DEVICE_NAME="Ztacx Sample"
+CONFIG_BT_PERIPHERAL=y
+
+
+
 
 # Uncomment the below to use RTT instead of serial console
 CONFIG_USE_SEGGER_RTT=y
