--- a/samples/blinky/.envrc
+++ b/samples/blinky/.envrc
@@ -1,5 +1,5 @@
+#. /opt/zephyr-sdk-0.14.1/environment-setup-aarch64-pokysdk-linux
 export ZEPHYR_BASE=$HOME/zephyrproject/zephyr
-export ZEPHYR_TOOLCHAIN_VARIANT=gnuarmemb
 [ -e ztacx ] || ln -s ../.. ztacx
 [ -n "$PROGRAM" ] || export PROGRAM=`basename $PWD`
 export PATH=ztacx/scripts:$PATH
