--- a/samples/shell/prj.conf
+++ b/samples/shell/prj.conf
@@ -10,6 +10,7 @@ CONFIG_FLASH_MAP_SHELL=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_SHELL=y
 CONFIG_GPIO=y
+CONFIG_GPIO_AS_PINRESET=n
 CONFIG_GPIO_SHELL=y
 CONFIG_HWINFO=y
 CONFIG_HWINFO_SHELL=y
