Update use of SYS_INIT for zephyr 3.1

--- a/samples/bt_peripheral/prj.conf
+++ b/samples/bt_peripheral/prj.conf
@@ -1,17 +1,29 @@
-# I cannot explain why CONFIG_FLASH is necessary, but it is
+CONFIG_BOOTLOADER_MCUBOOT=y
+
+
 CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_NVS=y
+CONFIG_SETTINGS_NVS=y
+
+CONFIG_GPIO=y
+CONFIG_HWINFO=y
 CONFIG_LOG=y
-CONFIG_ZTACX_LEAF_LED=y
-CONFIG_ZTACX_LEAF_SETTINGS=y
-CONFIG_ZTACX_LEAF_BT_PERIPHERAL=y
+CONFIG_LOG_BUFFER_SIZE=16384
+CONFIG_SHELL=y
 CONFIG_BT=y
 CONFIG_BT_DEVICE_NAME="Ztacx Sample"
 CONFIG_BT_PERIPHERAL=y
 
+CONFIG_ZTACX_LEAF_LED=y
+CONFIG_ZTACX_LEAF_SETTINGS=y
+CONFIG_ZTACX_LEAF_BT_PERIPHERAL=y
 
-
+# Uncomment these below to use serial console
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
 
 # Uncomment the below to use RTT instead of serial console
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
+#CONFIG_USE_SEGGER_RTT=y
+#CONFIG_RTT_CONSOLE=y
+#CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
