--- a/samples/blinky/.envrc
+++ b/samples/blinky/.envrc
@@ -1,5 +1,7 @@
 export ZEPHYR_BASE=$HOME/zephyrproject/zephyr
-export ZEPHYR_TOOLCHAIN_VARIANT=gnuarmemb
 [ -e ztacx ] || ln -s ../.. ztacx
 [ -n "$PROGRAM" ] || export PROGRAM=`basename $PWD`
 export PATH=ztacx/scripts:$PATH
+export ZEPHYR_SIGN=1
+
+. setboard accessly_core
