--- a/samples/blinky/prj.conf
+++ b/samples/blinky/prj.conf
@@ -1,11 +1,22 @@
+CONFIG_BOOTLOADER_MCUBOOT=y
 # I cannot explain why CONFIG_FLASH is necessary, but it is
 CONFIG_FLASH=y
+CONFIG_MINIMAL_LIBC_MALLOC=y
+CONFIG_MINIMAL_LIBC_CALLOC=y
+CONFIG_MINIMAL_LIBC_MALLOC_ARENA_SIZE=16384
 CONFIG_LOG=y
-CONFIG_LOG_MODE_IMMEDIATE=y
-CONFIG_ZTACX_LEAF_LED=y
+CONFIG_LOG_MODE_DEFERRED=y
+CONFIG_GPIO=y
+CONFIG_HWINFO=y
+CONFIG_HWINFO_SHELL=y
 CONFIG_SHELL=y
 
+CONFIG_ZTACX_LEAF_LED=y
+
+# Uncomment these below to use serial console
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
 # Uncomment the below to use RTT instead of serial console
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
+#CONFIG_USE_SEGGER_RTT=y
+#CONFIG_RTT_CONSOLE=y
+#CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
