Instance mechanism implement for LED and keypad.  Bluetooth peripheral and sensor samples working

--- a/samples/bt_sensor/prj.conf
+++ b/samples/bt_sensor/prj.conf
@@ -1,16 +1,21 @@
 #CONFIG_BOOTLOADER_MCUBOOT=y
 
-CONFIG_ZTACX_LEAF_LED=y
 CONFIG_ZTACX_LEAF_SETTINGS=y
 CONFIG_ZTACX_LEAF_BT_PERIPHERAL=y
-CONFIG_ZTACX_LEAF_I2C0=y
 CONFIG_ZTACX_LEAF_I2C1=y
+CONFIG_ZTACX_LEAF_IMS=y
+CONFIG_ZTACX_LEAF_LED=y
+CONFIG_ZTACX_LED_CYCLE=1000
+CONFIG_ZTACX_LED_DUTY=1
 
 CONFIG_NEWLIB_LIBC=y
 CONFIG_HEAP_MEM_POOL_SIZE=4096
 
 CONFIG_LOG=y
 CONFIG_LOG_BUFFER_SIZE=16384
+CONFIG_LOG_FUNC_NAME_PREFIX_INF=y
+CONFIG_LOG_FUNC_NAME_PREFIX_WRN=y
+CONFIG_LOG_FUNC_NAME_PREFIX_ERR=y
 
 CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
@@ -20,13 +25,18 @@ CONFIG_I2C=y
 CONFIG_NVS=y
 CONFIG_REBOOT=y
 CONFIG_SENSOR=y
-CONFIG_ADXL345=y
+#CONFIG_ADXL345=y
+CONFIG_LIS2DH=y
+CONFIG_LIS2DH_ACCEL_RANGE_16G=y
 CONFIG_SETTINGS=y
 CONFIG_SETTINGS_NVS=y
 
 CONFIG_BT=y
-CONFIG_BT_DEVICE_NAME="Ztacx Sample"
+CONFIG_BT_DEVICE_NAME="Shock Monitor"
 CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_RX_STACK_SIZE=4096
+CONFIG_BT_SHELL=y
+CONFIG_BT_GATT_CLIENT=y
 
 CONFIG_SHELL=y
 CONFIG_DEVICE_SHELL=y
