--- a/samples/blinky/prj.conf
+++ b/samples/blinky/prj.conf
@@ -1,4 +1,4 @@
-CONFIG_BOOTLOADER_MCUBOOT=y
+#CONFIG_BOOTLOADER_MCUBOOT=y
 # I cannot explain why CONFIG_FLASH is necessary, but it is
 CONFIG_FLASH=y
 CONFIG_MINIMAL_LIBC_MALLOC=y
@@ -17,6 +17,6 @@ CONFIG_ZTACX_LEAF_LED=y
 CONFIG_CONSOLE=y
 CONFIG_UART_CONSOLE=y
 # Uncomment the below to use RTT instead of serial console
-#CONFIG_USE_SEGGER_RTT=y
-#CONFIG_RTT_CONSOLE=y
-#CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
