--- a/samples/bt_sensor/.envrc
+++ b/samples/bt_sensor/.envrc
@@ -3,7 +3,8 @@ export ZEPHYR_BASE=$HOME/zephyrproject/zephyr
 [ -n "$PROGRAM" ] || export PROGRAM=`basename $PWD`
 export PATH=ztacx/scripts:$PATH
 #export ZEPHYR_SIGN=1
-export ZEPHYR_HELPER=tweety
+#export ZEPHYR_HELPER=tweety
+export ZEPHYR_HELPER=piranha
 export PORT=RTT
 
 . setboard accelerando_hailstone
