--- a/samples/kp/.envrc
+++ b/samples/kp/.envrc
@@ -3,7 +3,9 @@ export ZEPHYR_BASE=$HOME/zephyrproject/zephyr
 [ -n "$PROGRAM" ] || export PROGRAM=`basename $PWD`
 export PATH=ztacx/scripts:$PATH
 #export ZEPHYR_SIGN=1
-export ZEPHYR_HELPER=tweety
-export PORT=RTT
-
 . setboard accelerando_hailstone
+export PORT=RTT
+export RUNNER=openocd
+#export ZEPHYR_HELPER=piranha
+#export ZEPHYR_HELPER=pirate
+export ZEPHYR_HELPER=tweety
