Tidy up keypad sample

--- a/samples/kp/.envrc
+++ b/samples/kp/.envrc
@@ -4,7 +4,7 @@ export ZEPHYR_BASE=$HOME/zephyrproject/zephyr
 export PATH=ztacx/scripts:$PATH
 #export ZEPHYR_SIGN=1
 . setboard accelerando_hailstone
-export PORT=RTT
+export PORT=/dev/ttyUSB0
 export RUNNER=openocd
 #export ZEPHYR_HELPER=piranha
 #export ZEPHYR_HELPER=pirate
