--- a/samples/kp/prj.conf
+++ b/samples/kp/prj.conf
@@ -8,6 +8,7 @@ CONFIG_ZTACX_LEAF_SETTINGS=y
 CONFIG_ZTACX_LEAF_I2C0=y
 CONFIG_ZTACX_LEAF_I2C1=y
 CONFIG_ZTACX_LEAF_KP=y
+CONFIG_ZTACX_KP_ADDR=34
 
 CONFIG_CONSOLE=y
 CONFIG_SHELL=y
