Update for ZephyrOS 3.4 api changes, plus new features and samples

--- a/samples/blinky/.envrc
+++ b/samples/blinky/.envrc
@@ -1,8 +1,10 @@
-#. /opt/zephyr-sdk-0.14.1/environment-setup-aarch64-pokysdk-linux
-export ZEPHYR_BASE=$HOME/zephyrproject/zephyr
 [ -e ztacx ] || ln -s ../.. ztacx
 [ -n "$PROGRAM" ] || export PROGRAM=`basename $PWD`
+
 export PATH=ztacx/scripts:$PATH
+export ZEPHYR_BASE=$HOME/zephyrproject/zephyr
 #export ZEPHYR_SIGN=1
 
-. setboard accelerando_hailstone
+. setboard accelerando_bungan
+#. setboard accelerando_hailstone
+#. setboard stm32_min_dev_blue
