--- a/samples/kp/prj.conf
+++ b/samples/kp/prj.conf
@@ -1,19 +1,22 @@
 #CONFIG_BOOTLOADER_MCUBOOT=y
 CONFIG_FLASH=y
 CONFIG_LOG=y
-CONFIG_LOG_MODE_IMMEDIATE=y
 CONFIG_SETTINGS=y
 CONFIG_ZTACX_LEAF_LED=y
 CONFIG_ZTACX_LEAF_SETTINGS=y
-CONFIG_ZTACX_LEAF_I2C0=y
-CONFIG_ZTACX_LEAF_I2C1=y
 CONFIG_ZTACX_LEAF_KP=y
 CONFIG_ZTACX_KP_ADDR=34
+CONFIG_ZTACX_KP_BUS="i2c@40004000"
+CONFIG_NVS=y
+CONFIG_SETTINGS_NVS=y
+CONFIG_HEAP_MEM_POOL_SIZE=8192
+CONFIG_MAIN_STACK_SIZE=2048
 
 CONFIG_CONSOLE=y
 CONFIG_SHELL=y
+CONFIG_SHELL_BACKENDS=y
 CONFIG_DEVICE_SHELL=y
-CONFIG_FLASH_SHELL=y
+CONFIG_EVENTS=y
 CONFIG_GPIO=y
 CONFIG_GPIO_SHELL=y
 CONFIG_HWINFO=y
@@ -25,9 +28,10 @@ CONFIG_SENSOR=y
 CONFIG_SENSOR_SHELL=y
 CONFIG_SETTINGS_SHELL=y
 CONFIG_SHELL_STACK_SIZE=4096
+CONFIG_SHELL_LOG_BACKEND=y
 CONFIG_REBOOT=y
-CONFIG_UART_CONSOLE=y
-CONFIG_LOG_BACKEND_UART=y
+#CONFIG_UART_CONSOLE=y
+#CONFIG_LOG_BACKEND_UART=y
 CONFIG_STDOUT_CONSOLE=y
 CONFIG_LOG_FUNC_NAME_PREFIX_ERR=y
 CONFIG_LOG_FUNC_NAME_PREFIX_WRN=y
@@ -35,7 +39,9 @@ CONFIG_LOG_FUNC_NAME_PREFIX_INF=y
 CONFIG_LOG_FUNC_NAME_PREFIX_DBG=y
 
 # Uncomment the below to use RTT instead of serial console
-#CONFIG_USE_SEGGER_RTT=y
-#CONFIG_RTT_CONSOLE=y
-#CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
-#CONFIG_SHELL_BACKEND_RTT=y
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
+#CONFIG_LOG_BACKEND_UART=y
+CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
+CONFIG_SEGGER_RTT_BUFFER_SIZE_UP=4096
+CONFIG_SHELL_BACKEND_RTT=y
