--- a/samples/shell/.envrc
+++ b/samples/shell/.envrc
@@ -1,7 +1,15 @@
-export ZEPHYR_BASE=$HOME/zephyrproject/zephyr
 [ -e ztacx ] || ln -s ../.. ztacx
 [ -n "$PROGRAM" ] || export PROGRAM=`basename $PWD`
+
 export PATH=ztacx/scripts:$PATH
+export ZEPHYR_BASE=$HOME/zephyrproject/zephyr
 #export ZEPHYR_SIGN=1
-. setboard accelerando_hailstone
 export RUNNER=openocd
+export ZEPHYR_HELPER=tweety
+export PORT=RTT
+
+#. setboard accelerando_bungan
+#. setboard accelerando_corinda
+. setboard accelerando_hailstone
+
+
