--- a/samples/bt_keypad/prj.conf
+++ b/samples/bt_keypad/prj.conf
@@ -1,16 +1,19 @@
 #CONFIG_BOOTLOADER_MCUBOOT=y
 
-CONFIG_ZTACX_LEAF_LED=y
 CONFIG_ZTACX_LEAF_SETTINGS=y
 CONFIG_ZTACX_LEAF_BT_PERIPHERAL=y
-#CONFIG_ZTACX_LEAF_I2C0=y
-#CONFIG_ZTACX_LEAF_I2C1=y
+CONFIG_ZTACX_LEAF_KP=y
+CONFIG_ZTACX_KP_ADDR=34
 
-#CONFIG_NEWLIB_LIBC=y
-#CONFIG_HEAP_MEM_POOL_SIZE=4096
+CONFIG_ZTACX_LEAF_LED=y
 
 CONFIG_LOG=y
+CONFIG_LOG_BUFFER_SIZE=16384
+CONFIG_LOG_FUNC_NAME_PREFIX_INF=y
+CONFIG_LOG_FUNC_NAME_PREFIX_WRN=y
+CONFIG_LOG_FUNC_NAME_PREFIX_ERR=y
 
+CONFIG_EVENTS=y
 CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_GPIO=y
@@ -23,11 +26,18 @@ CONFIG_SETTINGS=y
 CONFIG_SETTINGS_NVS=y
 
 CONFIG_BT=y
-CONFIG_BT_DEVICE_NAME="Ztacx Sample"
+CONFIG_BT_DEBUG_LOG=y
+CONFIG_BT_SMP=y
+CONFIG_BT_DIS=y
+CONFIG_BT_DIS_MANUF="Accelerando"
+CONFIG_BT_DEVICE_NAME="JoyOfClicks"
 CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_DEVICE_APPEARANCE=961
+CONFIG_BT_BAS=y
+CONFIG_BT_RX_STACK_SIZE=4096
+CONFIG_BT_SHELL=y
 
 CONFIG_SHELL=y
-CONFIG_BT_SHELL=y
 CONFIG_DEVICE_SHELL=y
 CONFIG_FLASH_SHELL=y
 CONFIG_GPIO_SHELL=y
@@ -40,12 +50,11 @@ CONFIG_SHELL_STACK_SIZE=4096
 
 # Uncomment these below to use serial console
 CONFIG_CONSOLE=y
-CONFIG_UART_CONSOLE=y
+#CONFIG_UART_CONSOLE=y
 
 # Uncomment the below to use RTT instead of serial console
 CONFIG_USE_SEGGER_RTT=y
 CONFIG_RTT_CONSOLE=y
-CONFIG_UART_CONSOLE=n
 CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
 CONFIG_SHELL_BACKEND_RTT=y
 
