--- a/samples/shell/prj.conf
+++ b/samples/shell/prj.conf
@@ -1,49 +1,57 @@
 
-# I cannot explain why CONFIG_FLASH is necessary, but it is
 #CONFIG_BOOTLOADER_MCUBOOT=y
 CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_FLASH_PAGE_LAYOUT=y
 
-CONFIG_ZTACX_LEAF_I2C0=y
-CONFIG_ZTACX_LEAF_I2C1=y
+#CONFIG_ZTACX_LEAF_BATTERY=y
 CONFIG_ZTACX_LEAF_LED=y
 CONFIG_ZTACX_LEAF_SETTINGS=y
 
-CONFIG_CLOCK_CONTROL_NRF_SHELL=y
+CONFIG_LOG=y
+CONFIG_LOG_MODE_DEFERRED=y
+
+CONFIG_ADC=y
+CONFIG_ADC_SHELL=y
 CONFIG_CONSOLE=y
-CONFIG_DEBUG_INFO=y
+CONFIG_SHELL=y
 CONFIG_DEVICE_SHELL=y
-CONFIG_FLASH_MAP=y
+#CONFIG_FILE_SYSTEM=y
+#CONFIG_FILE_SYSTEM_LITTLEFS=y
+#CONFIG_FILE_SYSTEM_SHELL=y
 CONFIG_FLASH_MAP_SHELL=y
-CONFIG_FLASH_PAGE_LAYOUT=y
-CONFIG_FLASH_SHELL=y
 CONFIG_GPIO=y
-CONFIG_GPIO_AS_PINRESET=n
 CONFIG_GPIO_SHELL=y
+CONFIG_HEAP_MEM_POOL_SIZE=8192
 CONFIG_HWINFO=y
 CONFIG_HWINFO_SHELL=y
-CONFIG_HW_STACK_PROTECTION=y
 CONFIG_I2C=y
 CONFIG_I2C_SHELL=y
 CONFIG_KERNEL_SHELL=y
-CONFIG_LOG=y
-CONFIG_LOG_MODE_DEFERRED=y
-CONFIG_MAIN_STACK_SIZE=4096
-CONFIG_POSIX_API=y
-CONFIG_REBOOT=y
+CONFIG_LED=y
+CONFIG_LED_SHELL=y
+CONFIG_MAIN_STACK_SIZE=2048
+CONFIG_PWM=y
+CONFIG_PWM_SHELL=y
 CONFIG_SENSOR=y
 CONFIG_SENSOR_SHELL=y
-CONFIG_SERIAL=y
 CONFIG_SETTINGS=y
+CONFIG_NVS=y
+CONFIG_SETTINGS_NVS=y
 CONFIG_SETTINGS_SHELL=y
-CONFIG_SHELL=y
 CONFIG_SHELL_STACK_SIZE=4096
-CONFIG_STACK_SENTINEL=y
+CONFIG_REBOOT=y
 CONFIG_STDOUT_CONSOLE=y
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=4096
+CONFIG_LOG_FUNC_NAME_PREFIX_ERR=y
+CONFIG_LOG_FUNC_NAME_PREFIX_WRN=y
+CONFIG_LOG_FUNC_NAME_PREFIX_INF=y
+CONFIG_LOG_FUNC_NAME_PREFIX_DBG=y
 CONFIG_UART_CONSOLE=y
 
 # Uncomment the below to use RTT instead of serial console
 CONFIG_USE_SEGGER_RTT=y
 CONFIG_RTT_CONSOLE=y
+CONFIG_UART_CONSOLE=n
 CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
+CONFIG_SEGGER_RTT_BUFFER_SIZE_UP=4096
 CONFIG_SHELL_BACKEND_RTT=y
