Add modules for DAC and led strip.  Refactor bluetooth

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,13 @@ target_sources_ifdef(CONFIG_ZTACX_LEAF_BT_CENTRAL    app PRIVATE src/ztacx_bt_ce
 target_sources_ifdef(CONFIG_ZTACX_LEAF_BT_PERIPHERAL app PRIVATE src/ztacx_bt_peripheral.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_BT_UART       app PRIVATE src/ztacx_bt_uart.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_BUTTON        app PRIVATE src/ztacx_button.c)
+target_sources_ifdef(CONFIG_ZTACX_LEAF_DAC           app PRIVATE src/ztacx_dac.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_GPS           app PRIVATE src/ztacx_gps.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_I2C           app PRIVATE src/ztacx_i2c.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_IMS           app PRIVATE src/ztacx_ims.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_KP            app PRIVATE src/ztacx_kp.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_LED           app PRIVATE src/ztacx_led.c)
+target_sources_ifdef(CONFIG_ZTACX_LEAF_LED_STRIP     app PRIVATE src/ztacx_led_strip.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_LIDAR         app PRIVATE src/ztacx_lidar.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_LORAWAN       app PRIVATE src/ztacx_lorawan.c)
 target_sources_ifdef(CONFIG_ZTACX_LEAF_LORA_MODEM    app PRIVATE src/ztacx_lora_modem.c)
