--- a/samples/blinky/.envrc
+++ b/samples/blinky/.envrc
@@ -5,6 +5,7 @@ export PATH=ztacx/scripts:$PATH
 export ZEPHYR_BASE=$HOME/zephyrproject/zephyr
 #export ZEPHYR_SIGN=1
 
-. setboard accelerando_bungan
-#. setboard accelerando_hailstone
+#. setboard accelerando_bungan
+. setboard accelerando_hailstone
+#. setboard accelerando_redsoil
 #. setboard stm32_min_dev_blue
