--- a/samples/bt_keypad/.envrc
+++ b/samples/bt_keypad/.envrc
@@ -2,10 +2,10 @@ export ZEPHYR_BASE=$HOME/zephyrproject/zephyr
 [ -e ztacx ] || ln -s ../.. ztacx
 [ -n "$PROGRAM" ] || export PROGRAM=`basename $PWD`
 export PATH=ztacx/scripts:$PATH
-#export ZEPHYR_SIGN=1
+export ZEPHYR_SIGN=1
 #export ZEPHYR_HELPER=tweety
 #export ZEPHYR_HELPER=piranha
-export PORT=RTT
+#export PORT=RTT
 export RUNNER=openocd
 
 #. setboard accelerando_bungan
