--- a/samples/shell/.envrc
+++ b/samples/shell/.envrc
@@ -3,13 +3,14 @@
 
 export PATH=ztacx/scripts:$PATH
 export ZEPHYR_BASE=$HOME/zephyrproject/zephyr
-#export ZEPHYR_SIGN=1
+#export ZEPHYR_SIGN=0
 export RUNNER=openocd
-export ZEPHYR_HELPER=tweety
+#export ZEPHYR_HELPER=tweety
 export PORT=RTT
 
 #. setboard accelerando_bungan
 #. setboard accelerando_corinda
 . setboard accelerando_hailstone
+#. setboard ebyte_e73_tbb_nrf52832
 
 
