--- a/samples/blinky/prj.conf
+++ b/samples/blinky/prj.conf
@@ -1,5 +1,7 @@
 #CONFIG_BOOTLOADER_MCUBOOT=y
 # I cannot explain why CONFIG_FLASH is necessary, but it is
+CONFIG_BUILD_OUTPUT_UF2=y
+CONFIG_USE_DT_CODE_PARTITION=y
 CONFIG_FLASH=y
 CONFIG_LOG=y
 CONFIG_LOG_MODE_DEFERRED=y
@@ -14,6 +16,6 @@ CONFIG_ZTACX_LEAF_LED=y
 CONFIG_CONSOLE=y
 #CONFIG_UART_CONSOLE=y
 # Uncomment the below to use RTT instead of serial console
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
+#CONFIG_USE_SEGGER_RTT=y
+#CONFIG_RTT_CONSOLE=y
+#CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
