--- a/samples/bt_keypad/prj.conf
+++ b/samples/bt_keypad/prj.conf
@@ -1,11 +1,16 @@
-#CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_MCUBOOT_SIGNATURE_KEY_FILE="bootloader/mcuboot/root-rsa-2048.pem"
 
 CONFIG_ZTACX_LEAF_SETTINGS=y
 CONFIG_ZTACX_LEAF_BT_PERIPHERAL=y
 CONFIG_ZTACX_LEAF_KP=y
-CONFIG_ZTACX_KP_ADDR=34
+CONFIG_ZTACX_KP_ADDR=33
 
 CONFIG_ZTACX_LEAF_LED=y
+
+CONFIG_DISPLAY=y
+CONFIG_CHARACTER_FRAMEBUFFER=y
+CONFIG_HEAP_MEM_POOL_SIZE=16384
 
 CONFIG_LOG=y
 CONFIG_LOG_BUFFER_SIZE=16384
@@ -17,6 +22,7 @@ CONFIG_EVENTS=y
 CONFIG_FLASH=y
 CONFIG_FLASH_MAP=y
 CONFIG_GPIO=y
+CONFIG_ADC=y
 CONFIG_HWINFO=y
 CONFIG_I2C=y
 CONFIG_NVS=y
@@ -26,7 +32,6 @@ CONFIG_SETTINGS=y
 CONFIG_SETTINGS_NVS=y
 
 CONFIG_BT=y
-CONFIG_BT_DEBUG_LOG=y
 CONFIG_BT_SMP=y
 CONFIG_BT_DIS=y
 CONFIG_BT_DIS_MANUF="Accelerando"
@@ -38,9 +43,12 @@ CONFIG_BT_RX_STACK_SIZE=4096
 CONFIG_BT_SHELL=y
 
 CONFIG_SHELL=y
+CONFIG_CHARACTER_FRAMEBUFFER_SHELL=y
 CONFIG_DEVICE_SHELL=y
 CONFIG_FLASH_SHELL=y
 CONFIG_GPIO_SHELL=y
+CONFIG_ADC_SHELL=y
+CONFIG_LED_SHELL=y
 CONFIG_HWINFO_SHELL=y
 CONFIG_I2C_SHELL=y
 CONFIG_KERNEL_SHELL=y
@@ -48,13 +56,36 @@ CONFIG_SENSOR_SHELL=y
 CONFIG_SETTINGS_SHELL=y
 CONFIG_SHELL_STACK_SIZE=4096
 
+CONFIG_ZCBOR=y
+CONFIG_BASE64=y
+CONFIG_MCUMGR=y
+CONFIG_MCUMGR_TRANSPORT_BT=y
+CONFIG_MCUMGR_TRANSPORT_SHELL=y
+CONFIG_STREAM_FLASH=y
+CONFIG_STREAM_FLASH_PROGRESS=y
+CONFIG_IMG_MANAGER=y
+CONFIG_MCUMGR_GRP_IMG=y
+CONFIG_MCUMGR_GRP_OS=y
+CONFIG_UART_CONSOLE_MCUMGR=y
+
+CONFIG_MCUMGR_TRANSPORT_BT=y
+CONFIG_MCUMGR_TRANSPORT_BT_AUTHEN=n
+CONFIG_MCUMGR_TRANSPORT_BT_CONN_PARAM_CONTROL=y
+CONFIG_MCUMGR_TRANSPORT_BT_REASSEMBLY=y
+CONFIG_MCUMGR_TRANSPORT_NETBUF_SIZE=2475
+CONFIG_MCUMGR_GRP_OS_MCUMGR_PARAMS=y
+CONFIG_MCUMGR_TRANSPORT_WORKQUEUE_STACK_SIZE=4608
+CONFIG_MCUMGR_GRP_ZBASIC=y
+CONFIG_MCUMGR_GRP_ZBASIC_STORAGE_ERASE=y
+
+
 # Uncomment these below to use serial console
 CONFIG_CONSOLE=y
 #CONFIG_UART_CONSOLE=y
 
 # Uncomment the below to use RTT instead of serial console
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
-CONFIG_SHELL_BACKEND_RTT=y
+#CONFIG_USE_SEGGER_RTT=y
+#CONFIG_RTT_CONSOLE=y
+#CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
+#CONFIG_SHELL_BACKEND_RTT=y
 
