--- a/samples/bt_peripheral/prj.conf
+++ b/samples/bt_peripheral/prj.conf
@@ -23,7 +23,7 @@ CONFIG_SETTINGS=y
 CONFIG_SETTINGS_NVS=y
 
 CONFIG_BT=y
-CONFIG_BT_DEVICE_NAME="Ztacx Sample"
+CONFIG_BT_DEVICE_NAME="whammy"
 CONFIG_BT_PERIPHERAL=y
 
 CONFIG_SHELL=y
@@ -37,6 +37,8 @@ CONFIG_KERNEL_SHELL=y
 CONFIG_SENSOR_SHELL=y
 CONFIG_SETTINGS_SHELL=y
 CONFIG_SHELL_STACK_SIZE=4096
+CONFIG_SETTINGS_LOG_LEVEL_INF=y
+CONFIG_BT_LOG_LEVEL_INF=y
 
 # Uncomment these below to use serial console
 CONFIG_CONSOLE=y
