--- a/samples/bt_sensor/.envrc
+++ b/samples/bt_sensor/.envrc
@@ -4,7 +4,7 @@ export ZEPHYR_BASE=$HOME/zephyrproject/zephyr
 export PATH=ztacx/scripts:$PATH
 #export ZEPHYR_SIGN=1
 #export ZEPHYR_HELPER=tweety
-export ZEPHYR_HELPER=piranha
+#export ZEPHYR_HELPER=piranha
 export PORT=RTT
 
 . setboard accelerando_hailstone
