--- a/samples/shell/boards/accelerando_hailstone.conf
+++ b/samples/shell/boards/accelerando_hailstone.conf
@@ -1,10 +1,67 @@
-#CONFIG_SETTINGS_FILE=y
-##CONFIG_SETTINGS_FILE_PATH="/lfs1/settings/run"
+CONFIG_SETTINGS_FILE=y
+CONFIG_SETTINGS_FILE_PATH="/lfs1/settings/run"
 #CONFIG_DHT=y
-CONFIG_GPIO_PCF8574=y
+#CONFIG_GPIO_PCF8574=y
 
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_UART_CONSOLE=n
-CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
-CONFIG_SHELL_BACKEND_RTT=y
+CONFIG_BASE64=y
+CONFIG_BOOTLOADER_MCUBOOT=y
+CONFIG_MCUBOOT_SIGNATURE_KEY_FILE="bootloader/mcuboot/root-rsa-2048.pem"
+CONFIG_MCUBOOT_SHELL=y
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_ATT_PREPARE_COUNT=5
+#CONFIG_BT_BAS=y
+CONFIG_BT_L2CAP_TX_MTU=600
+CONFIG_BT_BUF_ACL_RX_SIZE=600
+CONFIG_BT_BUF_ACL_TX_SIZE=600
+CONFIG_BT_SHELL=y
+CONFIG_HWINFO=y
+CONFIG_HWINFO_SHELL=y
+CONFIG_NET_BUF=y
+CONFIG_ZCBOR=y
+CONFIG_CRC=y
+CONFIG_MCUMGR=y
+CONFIG_STREAM_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_MCUMGR_TRANSPORT_BT=y
+CONFIG_MCUMGR_TRANSPORT_SHELL=y
+CONFIG_MCUMGR_GRP_OS_TASKSTAT=y
+CONFIG_STATS=y
+CONFIG_STATS_NAMES=y
+CONFIG_IMG_MANAGER=y
+CONFIG_MCUMGR_GRP_IMG=y
+CONFIG_MCUMGR_GRP_OS=y
+CONFIG_MCUMGR_GRP_STAT=y
+#CONFIG_MCUMGR_SMP_BT_AUTHEN=n
+CONFIG_UART_CONSOLE_MCUMGR=y
+
+CONFIG_MCUMGR_TRANSPORT_BT=y
+CONFIG_MCUMGR_TRANSPORT_BT_AUTHEN=n
+CONFIG_MCUMGR_TRANSPORT_BT_CONN_PARAM_CONTROL=y
+CONFIG_MCUMGR_TRANSPORT_BT_REASSEMBLY=y
+CONFIG_MCUMGR_TRANSPORT_NETBUF_SIZE=2475
+CONFIG_MCUMGR_GRP_OS_MCUMGR_PARAMS=y
+CONFIG_MCUMGR_TRANSPORT_WORKQUEUE_STACK_SIZE=4608
+CONFIG_MCUMGR_GRP_ZBASIC=y
+CONFIG_MCUMGR_GRP_ZBASIC_STORAGE_ERASE=y
+
+
+# USB console
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_PRODUCT="Hailstone"
+CONFIG_USB_DEVICE_VID=1209
+CONFIG_USB_DEVICE_PID=ACC1
+CONFIG_USB_CDC_ACM_LOG_LEVEL_OFF=y
+CONFIG_SERIAL=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+CONFIG_UART_LINE_CTRL=y
+CONFIG_SHELL_BACKEND_SERIAL=y
+CONFIG_LOG_BACKEND_UART=y
+
+#RTT console
+#CONFIG_USE_SEGGER_RTT=y
+#CONFIG_RTT_CONSOLE=y
+#CONFIG_UART_CONSOLE=n
+#CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
+#CONFIG_SHELL_BACKEND_RTT=y
