--- a/samples/shell/prj.conf
+++ b/samples/shell/prj.conf
@@ -1,11 +1,8 @@
-
 #CONFIG_BOOTLOADER_MCUBOOT=y
-CONFIG_FLASH=y
-CONFIG_FLASH_MAP=y
-CONFIG_FLASH_PAGE_LAYOUT=y
 
 #CONFIG_ZTACX_LEAF_BATTERY=y
 CONFIG_ZTACX_LEAF_LED=y
+CONFIG_ZTACX_LEAF_I2C0=y
 CONFIG_ZTACX_LEAF_SETTINGS=y
 
 CONFIG_LOG=y
@@ -16,9 +13,12 @@ CONFIG_ADC_SHELL=y
 CONFIG_CONSOLE=y
 CONFIG_SHELL=y
 CONFIG_DEVICE_SHELL=y
-#CONFIG_FILE_SYSTEM=y
-#CONFIG_FILE_SYSTEM_LITTLEFS=y
-#CONFIG_FILE_SYSTEM_SHELL=y
+CONFIG_FILE_SYSTEM=y
+CONFIG_FILE_SYSTEM_LITTLEFS=y
+CONFIG_FILE_SYSTEM_SHELL=y
+CONFIG_FLASH=y
+CONFIG_FLASH_MAP=y
+CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP_SHELL=y
 CONFIG_GPIO=y
 CONFIG_GPIO_SHELL=y
@@ -36,10 +36,11 @@ CONFIG_PWM_SHELL=y
 CONFIG_SENSOR=y
 CONFIG_SENSOR_SHELL=y
 CONFIG_SETTINGS=y
-CONFIG_NVS=y
-CONFIG_SETTINGS_NVS=y
+#CONFIG_NVS=y
+#CONFIG_SETTINGS_NVS=y
 CONFIG_SETTINGS_SHELL=y
 CONFIG_SHELL_STACK_SIZE=4096
+#CONFIG_SMBUS_SHELL=y
 CONFIG_REBOOT=y
 CONFIG_STDOUT_CONSOLE=y
 CONFIG_LOG_FUNC_NAME_PREFIX_ERR=y
@@ -49,9 +50,9 @@ CONFIG_LOG_FUNC_NAME_PREFIX_DBG=y
 CONFIG_UART_CONSOLE=y
 
 # Uncomment the below to use RTT instead of serial console
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_UART_CONSOLE=n
-CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
-CONFIG_SEGGER_RTT_BUFFER_SIZE_UP=4096
-CONFIG_SHELL_BACKEND_RTT=y
+#CONFIG_USE_SEGGER_RTT=y
+#CONFIG_RTT_CONSOLE=y
+#CONFIG_UART_CONSOLE=n
+#CONFIG_SEGGER_RTT_BUFFER_SIZE_DOWN=64
+#CONFIG_SEGGER_RTT_BUFFER_SIZE_UP=4096
+#CONFIG_SHELL_BACKEND_RTT=y
